# finalproject_Andreenko_Andrey_dpo

./: .gitignore  pyproject.toml
data/: portfolios.json  rates.json  users.json
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: models.py
