[tool.poetry]
[tool.poetry.scripts]

project = "main:main"
name = "finalproject-andreenko-andrey-dpo"
version = "0.1.0"
description = ""
authors = ["Andrey Andreenko <MrAndreas@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"
prettytable = "^3.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
